--- a/frontend/src/app/tab-view/upload/upload.component.html
+++ b/frontend/src/app/tab-view/upload/upload.component.html
@@ -1,8 +1,5 @@
-<p-fileUpload name="demo[]" url="" (onUpload)="onUpload($event)" multiple="multiple" accept="image/*"
+<p-fileUpload name="demo[]" customUpload="true" (uploadHandler)="onUpload($event)" accept=".csv"
     maxFileSize="1000000">
-    <ng-template pTemplate="content">
-        <ul *ngIf="uploadedFiles.length">
-            <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
-        </ul>
+    <ng-template pTemplate="content" let-files>
     </ng-template>
 </p-fileUpload>
