--- a/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.html
+++ b/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.html
@@ -25,5 +25,5 @@
     </div>
 </div>
 <div class="row next">
-    <button pButton type="button" (click)="onNextClick($event)" label="Next" class="p-button-success p-button-lg"></button>
+    <button pButton type="button" (click)="onNextClick($event)" label="Input Parameters" class="p-button-success p-button-lg"></button>
 </div>
