--- a/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.html
+++ b/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col d-flex justify-content-center">
+    <div class="col d-flex justify-content-center pre-table">
         <p-table [columns]="cols" styleClass="p-datatable-striped" [value]="tableContent" [scrollable]="true"
             scrollHeight="200px">
             <ng-template pTemplate="caption">
