--- a/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.scss
+++ b/frontend/src/app/tab-view/preprocessed-table/preprocessed-table.component.scss
@@ -2,3 +2,11 @@
     text-align: center;
     margin-top: 3%;
 }
+
+:host ::ng-deep .p-datatable-scrollable-wrapper {
+    font-family: monospace;
+}
+
+:host ::ng-deep .p-datatable-header {
+    font-family: monospace;
+}
