Max value limit of K

--- a/frontend/src/app/tab-view/inputs/inputs.component.html
+++ b/frontend/src/app/tab-view/inputs/inputs.component.html
@@ -6,7 +6,7 @@
                 <p-inputNumber [(ngModel)]="k" [showButtons]="true" buttonLayout="horizontal" inputId="horizontal"
                     spinnerMode="horizontal" [step]="1" decrementButtonClass="p-button-danger"
                     incrementButtonClass="p-button-success" incrementButtonIcon="pi pi-plus"
-                    decrementButtonIcon="pi pi-minus" inputId="minmax" [min]=2 [max]=5>
+                    decrementButtonIcon="pi pi-minus" inputId="minmax" [min]=2 [max]="maxK">
                 </p-inputNumber>
             </div>
         </p-fieldset>
