Cluster Display css

--- a/frontend/src/app/tab-view/clusters/clusters.component.scss
+++ b/frontend/src/app/tab-view/clusters/clusters.component.scss
@@ -5,6 +5,12 @@
     margin-top: 2%;
 }
 
+.center-col {
+    text-align: center;
+    font-family: monospace;
+    font-weight: bolder;
+}
+
 .cluster-table {
     margin-top: 2%;
 }
