--- a/frontend/src/app/tab-view/clusters/clusters.component.html
+++ b/frontend/src/app/tab-view/clusters/clusters.component.html
@@ -2,8 +2,10 @@
     <div class="col-xs-12">
         <p class="centers-text">
             <p-badge [value]="badge" size="xlarge" severity="info"></p-badge>
-            {{centers}}
         </p>
+    </div>
+    <div class="col-xs-12 center-col">
+        {{centers}}
     </div>
 </div>
 
